test_cases/fail/32_param_too_big.c0
int main() {
    return 0;
}

struct banana;

struct banana { string yay; };

string foo(struct banana test) {
    return test.yay;
}
